--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "babel-cli": "6.18.0",
     "babel-core": "6.21.0",
     "babel-loader": "6.2.10",
+    "react": "16.5.2",
+    "react-dom": "^16.5.2",
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-transform-class-properties": "6.19.0",
     "babel-polyfill": "6.20.0",
